# CognitionOS

./: .env.example  .env.localhost  .gitignore  .pre-commit-config.yaml  .pylintrc  AI_AGENT_BREAKTHROUGH_SUMMARY.md  ARCHITECTURE_OVERVIEW.txt  COMPLETE_TRANSFORMATION.md  COMPREHENSIVE_AUDIT_SUMMARY.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVOPS_HARDENING_REPORT.md  Dockerfile.dev  Dockerfile.production  FINAL_95_PERCENT_SUMMARY.md  FINAL_COMPREHENSIVE_GUIDE.md  FINAL_SUMMARY.md  FINAL_TRANSFORMATION_SUMMARY.md  IMPLEMENTATION_DIFF_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_COMPLETE_REPORT.md  LOCALHOST_COMPLETE.md  LOCALHOST_IMPROVEMENT_COMPLETE.md  LOCALHOST_QUICKSTART.md  LOCALHOST_SETUP.md  LOCALHOST_VALIDATION_COMPLETE.md  LOCAL_RUNBOOK.ps1  LOCAL_RUNBOOK.sh  LOCAL_VERIFICATION.ps1  LOCAL_VERIFICATION.sh  LOW_PRIORITY_FEATURES.md  MASSIVE_SAAS_TRANSFORMATION_COMPLETE.md  MEDIUM_PRIORITY_FEATURES_COMPLETE.md  METRICS_BEFORE_AFTER.json  Makefile  P0_IMPLEMENTATION_COMPLETE.md  PHASE_2_TRANSFORMATION_COMPLETE.md  PHASE_3_COMPLETION_REPORT.txt  PHASE_4_8_COMPLETION_REPORT.md  (+32 more)
.github/workflows/: ci.yml
cli/: __init__.py  main.py  setup.py
cognitionos_platform/: __init__.py
cognitionos_platform/agent/: __init__.py  architecture_validator.py  codegen.py  context_manager.py  hallucination_detector.py  kernel.py  planner.py  policy.py  task_decomposer.py  validator.py
cognitionos_platform/api/: __init__.py
cognitionos_platform/runtime/: __init__.py  app_factory.py  health.py  settings.py  worker_factory.py
cognitionos_platform/sandbox/: __init__.py  runner_client.py
core/: __init__.py  config.py  exceptions.py  validation.py
core/application/: README.md  __init__.py  autonomous_agent_orchestrator.py  code_validation_pipeline.py  collaborative_agent_orchestrator.py  context_manager.py  execution_feedback_loop.py
core/config/: __init__.py  loader.py  main.py  service_configs.py  tier_config.py
core/domain/: README.md  __init__.py
core/engine/: __init__.py  agent_orchestrator.py  autonomous_codegen_agent.py  config_manager.py  di_container.py  distributed_lock.py  engine_orchestrator.py  event_bus.py  plugin_manager.py  service_registry.py  workflow_engine.py
database/: README.md  __init__.py  connection.py  models.py  requirements.txt  run_migrations.py
database/migrations/: 001_initial_schema.sql  002_v3_clean_architecture.sql  003_phase3_extended_operation.sql  004_phase4_task_decomposition.sql  005_phase5_v4_evolution.sql  006_phase6_intelligence_layer.sql  007_auth_users.sql  008_execution_persistence.sql  009_multi_tenancy_billing.sql  010_agent_runs.sql  011_webhook_events.sql  012_usage_event_id.sql
deploy/: deployment_config.py
docs/: BUILD_SUMMARY.md  INTEGRATION.md  PHASE4_COMPLETE.md  PHASE_2A_SUMMARY.md  PHASE_2_ALL_COMPLETE.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_FINAL_SUMMARY.md  PHASE_2_IMPLEMENTATION.md  SECURITY_AUDIT.md  agent_model.md  architecture.md  deployment.md  memory_model.md  security.md
docs/knowledge_layers/: README.md  future_evolution_strategy.md  glossary.md  repository_analysis.md  research_extensions.md  system_design_deep_dive.md
docs/v2/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  expansion_plan.md  performance_plan.md  refactor_plan.md
docs/v3/: EVOLUTION_STRATEGY_README.md  MASTER_PLAN.md  PHASE_1_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_PLUS_EVOLUTION_STRATEGY.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  clean_architecture.md  dependency_graph.md  domain_model.md
docs/v4/: COMPLETE_V4_SUMMARY.md  NEXT_EVOLUTION_STRATEGY.md  PHASE_6_COMPLETE.md  README.md
docs/verification/: architecture_audit.md  plan_vs_reality.md
examples/: README.md  phase6_integration_example.py  workflow_example.py
frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
infrastructure/: README.md  __init__.py
infrastructure/agent/: __init__.py  (+5 more)
prompts/: PHASE_6_8_IMPLEMENTATION_PROMPT.md  README.md
scripts/: deploy.sh  fix_imports.py  init_database.py  quickstart.sh  run_v2_migrations.py  setup-local.sh  setup-localhost.ps1  setup-localhost.sh  test_system.sh  validate_env.py  validate_env_config.py  validate_environment.py  validate_localhost.sh
services/: __init__.py
shared/: __init__.py
tests/: README.md  __init__.py  conftest.py
workflows/: agent_training.yaml  deploy_web_app.yaml  health_check.yaml  memory_gc.yaml
(+647 files in other folders)
