[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitionos"
version = "3.2.0"
description = "A Production-Grade, Backend-Heavy AI Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CognitionOS Team", email = "team@cognitionos.dev"}
]
keywords = ["ai", "agents", "workflows", "automation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi==0.109.1",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.22",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "celery==5.3.4",
    "pika==1.3.2",
    "aio-pika==9.3.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "cryptography==41.0.7",
    "httpx==0.26.0",
    "openai==1.6.1",
    "anthropic==0.8.1",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "python-json-logger==2.0.7",
    "prometheus-client==0.19.0",
    "opentelemetry-exporter-jaeger==1.21.0",
    "opentelemetry-exporter-prometheus==0.42b0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "opentelemetry-instrumentation-sqlalchemy==0.42b0",
    "opentelemetry-instrumentation-redis==0.42b0",
    "opentelemetry-instrumentation-requests==0.42b0",
    "opentelemetry-instrumentation-httpx==0.42b0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-benchmark==4.0.0",
    "faker==22.0.0",
    "black==23.12.1",
    "isort==5.13.2",
    "pylint==3.0.3",
    "mypy==1.8.0",
    "bandit==1.7.6",
    "safety==2.3.5",
]

[project.urls]
Homepage = "https://github.com/Ganesh172919/CognitionOS"
Documentation = "https://github.com/Ganesh172919/CognitionOS/blob/main/README.md"
Repository = "https://github.com/Ganesh172919/CognitionOS.git"
Issues = "https://github.com/Ganesh172919/CognitionOS/issues"

[tool.setuptools]
packages = ["core", "infrastructure", "services", "shared"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.sql", "*.md"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "asyncio: Async tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.coverage.run]
source = ["core", "infrastructure", "services"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
